# lora_secure_p2p

./: .gitignore  CMakeLists.txt  README.md  debug.conf  overlay-bt-dfu.conf  overlay-bt-no-fota.conf  prj.conf  sample.yaml  sysbuild.conf
boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
src/: app_config.h  main.c
src/app/: app_context.h  ping_mode.c  ping_mode.h  pong_mode.c  pong_mode.h
src/crypto/: aes_ccm.c  aes_ccm.h  crypto_init.c  crypto_init.h  ecdh.c  ecdh.h  key_storage.c  key_storage.h
src/lora/: lora_hal.c  lora_hal.h  lora_transport.c  lora_transport.h
src/protocol/: message.c  message.h  security.c  security.h  statistics.c  statistics.h
sysbuild/: mcuboot.conf
